download link in left sidebar

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -168,8 +168,7 @@ body.outfits-edit
     button
       font-size: 75%
       width: 100%
-  #toggle-big-picture, #preview-mode-note, #report-broken-image
-    display: block
+  #preview-mode a
     font-size: 75%
     margin-top: .5em
     text-align: center
