--- a/app/assets/stylesheets/broken_image_reports/_new.sass
+++ b/app/assets/stylesheets/broken_image_reports/_new.sass
@@ -1,26 +1,12 @@
+@import partials/assets-list
+
 body.broken_image_reports-new
 
   #report-assets
-    li
-      +border-radius(.5em)
-      +inline-block
-      border: 1px solid $soft-border-color
-      margin: .5em
-      padding: .5em
-      text-align: center
-      vertical-align: top
-      width: 150px
+    +assets-list
 
-      img, span, input
-        display: block
-        width: 100%
-
-      img
-        height: 150px
-        width: 150px
-
-      span
-        font-size: 85%
+    span
+      font-size: 85%
 
     .manual a
       display: block
