--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -168,17 +168,19 @@ body.outfits-edit
     button
       font-size: 75%
       width: 100%
-  #preview-mode a
-    font-size: 75%
-    margin-top: .5em
-    text-align: center
-    text-decoration: none
-    width: 100%
-    em
-      font-style: normal
-      text-decoration: underline
-  #preview-mode-note, #report-broken-image
-    display: none
+  #preview-mode
+    a
+      display: block
+      font-size: 75%
+      margin-top: .5em
+      text-align: center
+      text-decoration: none
+      width: 100%
+      em
+        font-style: normal
+        text-decoration: underline
+    #report-broken-image
+      display: none
   
   #preview-sidebar
     float: left
