--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -37,6 +37,8 @@
         = link_to t('.preview.big_picture'), 'javascript:void(0)',
           id: 'toggle-big-picture'
         = link_to t('.preview.download'), 'javascript:void(0)', id: 'preview-mode-download'
+        = link_to t('.preview.swf_links'), 'javascript:void(0)', id: 'swf-links',
+          target: '_blank', 'data-base-url' => links_swf_assets_path
         = link_to t('.preview.mode.image.report_broken'), 'javascript:void(0)',
           :id => 'report-broken-image', :target => '_blank', 'data-base-url' => new_broken_image_report_path
     #preview-sidebar
