update impress repository URL :)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,8 +62,7 @@
         %ul
           %li= link_to t('organization_name'), 'http://openneo.net/'
           %li= link_to t('.footer.blog'), 'http://blog.openneo.net/'
-          %li= link_to t('.footer.source_code'),
-                      'http://github.com/matchu/openneo-impress-rails'
+          %li= link_to t('.footer.source_code'), 'https://github.com/openneo/rails'
           %li= link_to t('.footer.terms'), terms_path
         
         %div
