--- a/app/views/closet_hangers/index.html.haml
+++ b/app/views/closet_hangers/index.html.haml
@@ -73,6 +73,10 @@
                     closet_visibility_choices(:human_name)
                   = f.submit t('.unlisted.submit')
                   = closet_visibility_descriptions
+                .closet-list-controls
+                  = form_tag user_closet_hangers_path(@user), method: :delete do
+                    = hidden_field_tag :list_id, owned
+                    = submit_tag t('.remove_all.submit'), confirm: t('.remove_all.confirm')
               - if has_lists?(owned)
                 %h4= t '.unlisted.header'
             - if !@public_perspective
