--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,7 +14,7 @@
 @import closet_hangers/petpage
 @import closet_lists/form
 @import donations/show
-@import neopets_pages/new
+@import neopets_page_import_tasks/new
 @import neopets_users/form
 @import contributions/index
 @import items
