--- a/app/assets/stylesheets/neopets_page_import_tasks/_new.sass
+++ b/app/assets/stylesheets/neopets_page_import_tasks/_new.sass
@@ -1,4 +1,4 @@
-body.neopets_pages-new, body.neopets_pages-create
+body.neopets_page_import_tasks-new, body.neopets_page_import_tasks-create
 
   #title
     float: left
