--- a/app/views/donations/show.html.haml
+++ b/app/views/donations/show.html.haml
@@ -14,7 +14,7 @@
 
 %p
   %strong But enough about us. Let's talk about you!
-  When we brag about you on our #{link_to 'donors list', donate_path},
+  When we brag about you on our #{link_to 'donors list', @donation.campaign},
   what should we say?
   (If you'd rather take care of this later, no worries!
   Check your email for a copy of this URL.)
