--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -1,7 +1,7 @@
 @import "partials/icon"
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700)
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic)
-@import url(http://fonts.googleapis.com/css?family=Calligraffitti)
+@import url(//fonts.googleapis.com/css?family=Droid+Sans:400,700)
+@import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic)
+@import url(//fonts.googleapis.com/css?family=Calligraffitti)
 
 /* Reset
 
