--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,6 +10,7 @@
 @import partials/jquery.jgrowl
 
 @import broken_image_reports/new
+@import campaigns/show
 @import closet_hangers/index
 @import closet_hangers/petpage
 @import closet_lists/form
@@ -25,7 +26,6 @@
 @import outfits/new
 @import outfits/show
 @import pets/bulk
-@import static/donate
 @import static/image_mode
 @import static/terms
 @import swf_assets/links
