camo the emotes on the campaign show page

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -76,7 +76,7 @@
     However, there are a few important bits of legal whatnot to keep in mind.
     (Mostly, it's the list of things that we expect to do but in no legally
     binding way promise to do. Just in case
-    <img src="http://images.neopets.com/neoboards/smilies/tongue.gif" />)
+    <img src="#{camo_image_url 'http://images.neopets.com/neoboards/smilies/tongue.gif'}" />)
 
     Featuring your outfit is a thank-you gift that we like to give our donors;
     it is *not* a purchased service. We make no guarantee that we'll post your
@@ -98,7 +98,7 @@
     Posting an obscene outfit then requesting a refund once we take it down is
     *not* acting in good faith, and we don't want our refund policy to
     encourage that behavior
-    <img src="http://images.neopets.com/neoboards/smilies/tongue.gif" />
+    <img src="#{camo_image_url 'http://images.neopets.com/neoboards/smilies/tongue.gif'}" />
     We determine "good faith" at our sole discretion—not limited to those
     examples—but we're generally pretty understanding.)
 
