--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -3,7 +3,7 @@
 
 - localized_cache "items/#{@item.id} header" do
   %header#item-header
-    = image_tag @item.thumbnail_url, :id => 'item-thumbnail'
+    = image_tag @item.thumbnail.secure_url, :id => 'item-thumbnail'
     %div
       %h2#item-name= @item.name
       = nc_icon_for(@item)
