--- a/app/views/donation_mailer/thank_you_email.html.erb
+++ b/app/views/donation_mailer/thank_you_email.html.erb
@@ -1,19 +1,9 @@
 <p>
-  Hello, hello! I'm Matchu, loving father of Dress to Impress.
+  Hi, friend! I'm Matchu, that guy who made Dress to Impress :)
 </p>
 
 <p>
-  I just wanted to let you know how much your help means to me.
-  I built the site mostly for fun, and never really expected it to catch on,
-  but here we are, years later, and the site is entirely community-driven, from
-  our modeling data to our hosting costs.
-  Thanks so much for being a part of that community—the whole thing blows my
-  mind, and I feel honored to be a part of this big thing that is Dress to
-  Impress :)
-</p>
-
-<p>
-  Before I forget, let's get to receipt business.
+  So, let's do the business first:
   You donated
   <strong><%= number_to_currency @donation.amount / 100.0 %></strong>
   (thanks again, by the way!),
@@ -22,24 +12,26 @@
 </p>
 
 <p>
-  Anyway. I hope you enjoy our little thank-you gift (you <em>do</em> have some
-  beautiful outfits for me to show off, right?), and that Dress to Impress
-  continues to bring you joy :)
+  Really, though, my favorite part of these emails is that it gives me a chance
+  to hear from some of our most excited users :D
+  What do you love about Dress to Impress? What parts aren't so great?
+  Any issues I can help you with while we're here?
+  What does Dress to Impress need to do long-term to continue to be a valuable
+  resource for years to come?
 </p>
 
 <p>
-  Oh! And, if you ever have anything to say to me, <em>please</em> let me know
-  at <%= mail_to 'matchu@openneo.net' %>. I'm looking forward to any and all
-  questions, comments, concerns, insults, treasure maps, love letters, memes,
-  or limericks you send my way :D
+  Hit Reply and let me know—or we can just talk
+  about how pumped we are for the next season of Doctor Who :o
+  Up to you :)
 </p>
 
 <p>
-  Thanks again for your help! DTI &lt;3s you.<br />
-  —Matchu
+  Thanks again for your help! Serving this community is an honor and a pleasure.<br />
+  —<i>Matchu</i>
 </p>
 
 <p>
   P.S. Seriously. Reply to this email and tell me something.
-  It'll make my day :D
+  It always makes my day :D
 </p>
