show campaign on trade lists
Turns out ~22% of our users initially land on a trade list.
We like to keep the campaign off the pages where space is at a
premium, so we try to whitelist it to major landing pages in order
to avoid accidentally creating a bad experience on some page :)

--- a/app/assets/stylesheets/closet_hangers/_index.sass
+++ b/app/assets/stylesheets/closet_hangers/_index.sass
@@ -3,6 +3,7 @@
 @import "../partials/secondary_nav"
 
 body.closet_hangers-index
+  +campaign-progress
   +secondary-nav
 
   #title
@@ -355,11 +356,11 @@ body.closet_hangers-index
             display: block
 
       #toggle-help
-        display: inline
+        display: inline-block
 
   &.js
     #toggle-compare
-      display: inline
+      display: inline-block
 
     #closet-hangers.comparing
       .object
