tweak the fine print phrasing again ;P

--- a/app/views/campaigns/show.html.haml
+++ b/app/views/campaigns/show.html.haml
@@ -100,17 +100,18 @@
     refund within 60 days of donating, and, so long as you're acting in good
     faith, we'll refund the entire donation.
     (For example, if you realize you can't afford to donate, or legit just
-    change your mind, then we'd love to help you out :)
-    But we don't want people posting obscene outfits and expecting refunds once
-    we take them down, so we need a refund policy that lets us reject those
-    requests #{image_tag 'emoticons/tongue.gif'}
+    change your mind, then we'd love to help you out
+    #{image_tag 'emoticons/smiley.gif'}
+    But we don't want people posting obscene content and expecting refunds
+    once we take it down, so we need a refund policy that lets us reject
+    those requests #{image_tag 'emoticons/tongue.gif'}
     So, we determine "good faith" at our sole discretion—not limited to those
     examples—but we're generally pretty understanding.)
 
     **TL;DR: We love to help and acknowledge our good-faith donors,
     but reserve the right not to do those things,
     in order to better handle bad-faith donors and unexpected circumstances.**
-    That's all #{image_tag 'emoticons/smiley.gif'}
+    That's the whole deal #{image_tag 'emoticons/smiley.gif'}
 
 - content_for :javascripts do
   = javascript_include_tag 'https://checkout.stripe.com/checkout.js',
