good-enough zeroclipboard implementation

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -648,7 +648,11 @@ body.outfits-edit
           float: right
           font-size: 75%
           margin-top: .25em
+          margin-left: 1.5em
           text-decoration: none
+
+          &.zeroclipboard-is-active
+            font-weight: bold
 
       &.support-download
         li a
